Source/WebCore/platform/mediastream/RealtimeMediaSource.cpp
@@ -924,6 +924,18 @@ void RealtimeMediaSource::scheduleDeferredTask(WTF::Function<void()>&& function)
     });
 }
 
+RealtimeMediaSource::Observer::~Observer()
+{
+}
+
+RealtimeMediaSource::AudioCaptureFactory::~AudioCaptureFactory()
+{
+}
+
+RealtimeMediaSource::VideoCaptureFactory::~VideoCaptureFactory()
+{
+}
+
 } // namespace WebCore
 
 #endif // ENABLE(MEDIA_STREAM)
